--- a/css/index_style.css
+++ b/css/index_style.css
@@ -130,7 +130,7 @@ body{
         background-color: rgba(0,0,0,0.7);
     }
    *{
-       margin-right: 0;
+       margin-right: 0 !important;
    }
 
 
